Add doctor and patient CRUD pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dentist Clinic</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 </head>
 <body class="bg-gray-100 p-4">
-  <div id="app"></div>
-  <script type="text/javascript" src="app.js"></script>
+  <div class="max-w-xl mx-auto space-y-4">
+    <h1 class="text-2xl font-bold">Dentist Clinic</h1>
+    <a class="text-blue-500 underline" href="patients.html">Patients</a>
+    <a class="text-blue-500 underline" href="doctors.html">Doctors</a>
+  </div>
 </body>
 </html>
